--- a/Asgmt-1/app/src/main/res/layout/fragment_group_list.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_group_list.xml
@@ -32,6 +32,8 @@
         android:id="@+id/rvGroups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_layout">
 
     </androidx.recyclerview.widget.RecyclerView>
