--- a/Asgmt-1/app/src/main/res/layout/group_row.xml
+++ b/Asgmt-1/app/src/main/res/layout/group_row.xml
@@ -8,6 +8,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:hint="@string/placeholder_groupname"
+        android:paddingLeft="4dp"
+        android:paddingTop="2dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="2dp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="20sp" />
 
 </LinearLayout>
