--- a/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
@@ -21,7 +21,7 @@
         android:id="@+id/bot_layout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/teal_400"
+        android:background="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginStart="5dp"
+            android:backgroundTint="@color/dark_blue"
             android:hint="@string/btn_groups"
             android:textColorHint="@color/white"
             android:textSize="20sp"
