--- a/Asgmt-1/app/src/main/res/layout/fragment_group.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_group.xml
@@ -20,13 +20,12 @@
             android:layout_height="48dp"
             android:layout_marginEnd="5dp"
             android:backgroundTint="@color/dark_blue"
-            android:hint="@string/btn_back"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/btn_back" />
 
         <TextView
             android:id="@+id/tvGroupName"
@@ -65,14 +64,13 @@
             android:layout_height="48dp"
             android:layout_marginStart="5dp"
             android:backgroundTint="@color/dark_blue"
-            android:hint="@string/btn_chat"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="@string/btn_chat" />
 
         <Button
             android:id="@+id/btnAction"
@@ -80,13 +78,12 @@
             android:layout_height="48dp"
             android:layout_marginEnd="5dp"
             android:backgroundTint="@color/dark_blue"
-            android:hint="@string/btn_register"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/btn_register" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
