--- a/Asgmt-1/app/src/main/res/layout/fragment_group_list.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_group_list.xml
@@ -20,13 +20,12 @@
             android:layout_height="48dp"
             android:layout_marginEnd="5dp"
             android:backgroundTint="@color/dark_blue"
-            android:hint="@string/btn_back"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/btn_back" />
 
         <TextView
             android:id="@+id/tvGroups"
@@ -80,12 +79,12 @@
             android:layout_height="48dp"
             android:layout_marginStart="4dp"
             android:backgroundTint="@color/dark_blue"
-            android:hint="@string/btn_new"
-            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/btn_new" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
