--- a/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
@@ -33,11 +33,11 @@
             android:layout_height="48dp"
             android:layout_marginStart="5dp"
             android:backgroundTint="@color/dark_blue"
-            android:hint="@string/btn_groups"
-            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/btn_groups" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
