--- a/Asgmt-1/app/src/main/res/layout/fragment_group_list.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_group_list.xml
@@ -20,12 +20,12 @@
             android:layout_height="48dp"
             android:layout_marginEnd="5dp"
             android:backgroundTint="@color/dark_blue"
+            android:text="@string/btn_back"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/btn_back" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvGroups"
@@ -79,12 +79,12 @@
             android:layout_height="48dp"
             android:layout_marginStart="4dp"
             android:backgroundTint="@color/dark_blue"
+            android:text="@string/btn_new"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/btn_new" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
