--- a/Asgmt-1/app/src/main/res/layout/fragment_chat.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_chat.xml
@@ -14,18 +14,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
+            android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginEnd="5dp"
-            android:backgroundTint="@color/dark_blue"
-            android:text="@string/btn_back"
-            android:textColor="@color/white"
-            android:textSize="20sp"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/desc_back"
+            android:cropToPadding="false"
+            android:scaleType="fitCenter"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/back_button" />
 
         <TextView
             android:id="@+id/tvGroupName"
