--- a/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
@@ -46,7 +46,7 @@
             android:layout_height="48dp"
             android:layout_marginEnd="5dp"
             android:backgroundTint="@color/dark_blue"
-            android:text="@string/btn_language_swe"
+            android:text="@string/btn_language"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
