--- a/Asgmt-1/app/src/main/res/layout/fragment_chat.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_chat.xml
@@ -43,6 +43,15 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvChat"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_layout" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bot_layout"
         android:layout_width="match_parent"
