--- a/Asgmt-1/app/src/main/res/layout/fragment_users.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_users.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:hint="@string/placeholder_groupname"
+            android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="28sp"
             android:textStyle="bold"
@@ -69,6 +70,7 @@
             android:text="@string/btn_chat"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
