--- a/Asgmt-1/app/src/main/res/layout/group_row.xml
+++ b/Asgmt-1/app/src/main/res/layout/group_row.xml
@@ -16,6 +16,7 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="20sp" />
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
