--- a/Asgmt-1/app/src/main/res/layout/user_row.xml
+++ b/Asgmt-1/app/src/main/res/layout/user_row.xml
@@ -13,8 +13,8 @@
         android:paddingTop="2dp"
         android:paddingRight="4dp"
         android:paddingBottom="2dp"
-        android:textAllCaps="false"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="20sp" />
+        android:textSize="24sp"
+        android:textStyle="bold" />
 </LinearLayout>
