--- a/Asgmt-1/app/src/main/res/layout/viewable_row.xml
+++ b/Asgmt-1/app/src/main/res/layout/viewable_row.xml
@@ -10,9 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_weight="0"
+        android:shadowColor="@color/black"
+        android:shadowDx="1.5"
+        android:shadowDy="1.5"
+        android:shadowRadius="1.6"
         android:text="@string/placeholder_groupname"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <CheckBox
         android:id="@+id/cbViewable"
