--- a/Asgmt-1/app/src/main/res/values/colors.xml
+++ b/Asgmt-1/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="teal_400">#0CAE9E</color>
     <color name="blue">#49A1FF</color>
     <color name="dark_blue">#005CA1</color>
+    <color name="grey">#808A8A8A</color>
 </resources>
