--- a/Asgmt-1/app/src/main/res/layout/fragment_chat.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_chat.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:hint="@string/placeholder_groupname"
+            android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="28sp"
             android:textStyle="bold"
