--- a/Asgmt-1/app/src/main/res/layout/fragment_users.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_users.xml
@@ -47,7 +47,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUsers"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bot_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_layout" />
