--- a/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
@@ -19,11 +19,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvViewableGroups"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="@+id/mapView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bot_layout"
