--- a/Asgmt-1/app/src/main/res/layout/imagechat_row.xml
+++ b/Asgmt-1/app/src/main/res/layout/imagechat_row.xml
@@ -15,9 +15,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:hint="@string/placeholder_username"
-            android:paddingLeft="4dp"
+            android:paddingLeft="8dp"
             android:paddingTop="2dp"
-            android:paddingRight="4dp"
+            android:paddingRight="8dp"
             android:paddingBottom="2dp"
             android:shadowColor="@color/black"
             android:shadowDx="1.5"
@@ -34,6 +34,8 @@
             android:layout_width="256dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/desc_uploadedImage"
             android:scaleType="fitCenter"
