--- a/Asgmt-1/app/src/main/res/layout/viewable_row.xml
+++ b/Asgmt-1/app/src/main/res/layout/viewable_row.xml
@@ -24,5 +24,6 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_weight="0"
+        android:clickable="false"
         android:textAlignment="textStart" />
 </LinearLayout>
