--- a/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
+++ b/Asgmt-1/app/src/main/res/layout/fragment_maps.xml
@@ -22,7 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="@+id/mapView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bot_layout"
